the input 'type' has been added to both the create annd the edit views.Some pictures have been added to some products

--- a/src/views/products/productCreate.ejs
+++ b/src/views/products/productCreate.ejs
@@ -103,6 +103,15 @@
             <label for="price">Precio</label>
             <input type="number" name="price" id="price" class="input" placeholder="  Precio">
           </div>
+          <div>
+            <label for="type">Tipo: </label>
+            <select name="type" id="type" class="input">              
+              <option value="Destacados">Destacados</option>
+              <option value="Agregados recientemente">Agregados recientemente</option>
+              <option value="Más vendidos">Más vendidos</option>
+              <option value="En oferta">En oferta</option>
+            </select>
+          </div>
           <button type="submit" class="register-button">Enviar</button>
         </section>
         </form>
