Unified partials files for classifying products [featured, offers,all products].  Header's navbar has been modified & usersData.json has been created

--- a/public/css/home/bodyStyles.css
+++ b/public/css/home/bodyStyles.css
@@ -81,7 +81,7 @@ p.price {
   margin-top: 15px;
   margin-bottom: 25px;
   border-top: #88d317 solid 2px;
-  color: white;
+  color: black;
   text-align: center;
 }
 
