--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -19,9 +19,10 @@
     <nav class="header-nav">
       <ul class="service-options">
         <li><a href="#">Novedades</a></li>
-        <li><a href="#">Productos destacados</a></li>
+        <li><a href="/products">Todos los productos</a></li>
         <li><a href="#">Favoritos</a></li>
         <li><a href="#">Centro de información</a></li>
+        <li><a href="/products/create">Vender</a></li>
       </ul>
       <ul class="user-options">
         <li>
