--- a/src/views/products/productEdit.ejs
+++ b/src/views/products/productEdit.ejs
@@ -49,6 +49,7 @@
               <option value="PC Gamer">PC Gamer</option>
               <option value="Almacenamiento">Almacenamiento</option>
               <option value="Memorias">Memorias</option>
+              <option value="Otra">Otra</option>
             </select>
           </div>
           <div class="form-input">
@@ -75,6 +76,7 @@
               <option value="Nvidia">Nvidia</option>
               <option value="Samsung">Samsung</option>
               <option value="Sony">Sony</option>
+              <option value="Otra">Otra</option>
             </select>
           </div>
           <div class="form-input">
