--- a/src/views/products/products.ejs
+++ b/src/views/products/products.ejs
@@ -1,40 +1,31 @@
 <!DOCTYPE html>
 <html lang="es-mx">
   <head>
-    <%- include("partials/head") %>
+    <%- include("../partials/head") %>
     <link rel="stylesheet" href="/css/home/bodyStyles.css" />
     <link rel="stylesheet" href="/css/home/carruselStyle.css" />
-    <link
-      rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-      crossorigin="anonymous"
-    />
-    <title>Welcome to "Tech Land"!</title>
+   
+    <title>"Tech Land" All products </title>
   </head>
 
   <body>
     <header>
-      <%- include('./partials/header')%> <%- include('./partials/carrusel')%>
+      <%- include('../partials/header')%> 
     </header>
 
     <main class="firstContent">
-      <h2 class="titleMain">Productos Destacados:</h2>
+    
+
+    <h2 class="titleMain">Todos los productos:</h2>
     <section class="featuredProducts">
-      <% destacados.forEach(product => { %>
-        <%- include('partials/ProductsList',{product:product})%>
+      <% products.forEach(product => { %>
+        <%- include('../partials/ProductsList',{product:product})%>
       <% }) %>
     </section>
 
-    <h2 class="titleMain">Productos en Promoción:</h2>
-    <section class="promotionalProducts">
-      <% enOferta.forEach(product => { %>    
-        <%- include('partials/ProductsList',{product:product})%>
-      <% })%>
-  </section>
     </main>
 
-    <%- include('./partials/footer')%>
+    <%- include('../partials/footer')%>
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
       integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
