Files structre has changed in order to modularize user files

--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -26,10 +26,10 @@
       </ul>
       <ul class="user-options">
         <li>
-          <a href="/login">Log in <i class="fas fa-sign-in-alt"></i></a>
+          <a href="/users/login">Log in <i class="fas fa-sign-in-alt"></i></a>
         </li>
         <li>
-          <a href="/register">Sign up <i class="fas fa-user-plus"></i></a>
+          <a href="/users/register">Sign up <i class="fas fa-user-plus"></i></a>
         </li>
         <li>
           <div class="search-box-mobile">
