--- a/src/views/users/login.ejs
+++ b/src/views/users/login.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <%- include("partials/head") %>
+    <%- include("../partials/head") %>
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
       rel="stylesheet"
@@ -61,16 +61,16 @@
     </header> -->
 
     <header>
-      <%- include('./partials/header')%> 
+      <%- include('../partials/header')%> 
     </header>
 
     <main>
       <article class="tabs">
         <div class="register">
-          <a href="/register" class="register-tab">¡Regístrate!</a>
+          <a href="/users/register" class="register-tab">¡Regístrate!</a>
         </div>
         <div class="login">
-          <a href="/login" class="login-tab">Ingresa a tu cuenta</a>
+          <a href="/users/login" class="login-tab">Ingresa a tu cuenta</a>
         </div>
       </article>
       <section>
@@ -111,7 +111,7 @@
       <div class="forget"><a href="#">¿Olvidaste tu contraseña?</a></div>
     </main>
 
-    <%- include('./partials/footer')%>
+    <%- include('../partials/footer')%>
     <!-- <footer>
         <div class="social-networks">
         <i class="fab fa-instagram fa-3x"></i>
