--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <%- include("partials/head") %>
+    <%- include("../partials/head") %>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap" rel="stylesheet">    
     <!-- <link href = "/css/normalize.css" rel = stylesheet> -->    
@@ -11,14 +11,14 @@
 </head>
 <body>
     <header>
-    <%- include('./partials/header')%>      
+    <%- include('../partials/header')%>      
     </header>
 
     <main>
         
         <article class="tabs">
-            <div class="register"><a href="/register" class="register-tab">¡Regístrate!</a></div>
-            <div class="login"><a href="/login" class="login-tab">Ingresa a tu cuenta</a></div>
+            <div class="register"><a href="/users/register" class="register-tab">¡Regístrate!</a></div>
+            <div class="login"><a href="/users/login" class="login-tab">Ingresa a tu cuenta</a></div>
         </article>
 
         <section>
@@ -289,6 +289,6 @@
         </section>
     </main>
 
-    <%- include('./partials/footer')%>
+    <%- include('../partials/footer')%>
 </body>
 </html>
