--- a/src/views/users/login.ejs
+++ b/src/views/users/login.ejs
@@ -75,18 +75,24 @@
       </article>
       <section>
         <h1>Iniciar sesión</h1>
-        <form action="/home" method="GET">
+        <form action="/users/login" method="POST">
           <div>
             <input
               size="20px"
               type="text"
               class="input"
               id="fname"
-              name="email-address"
+              name="email"
               placeholder="  Email"
               required
               minlength="8"
+              value="<%= locals.errors && oldData ? oldData.email : null %>"
             />
+            <% if(locals.errors && errors.email){ %>
+              <p style="color:red">
+                <%= errors.email.msg %>
+              </p>
+            <% } %>
           </div>
           <div>
             <input
@@ -100,9 +106,14 @@
               minlength="8"
               pattern="^(?=.*[A-Za-z])(?=.*\d)(?=.*[@$!%*#?&])[A-Za-z\d@$!%*#?&]{8,}$"
             />
+            <% if(locals.errors && errors.password){ %>
+              <p style="color:red">
+                <%= errors.password.msg %>
+              </p>
+            <% } %>
           </div>
           <div class="check">
-            <input type="checkbox" class="checkbox" /> ¿Desea guardar su
+            <input type="checkbox" class="checkbox" name="rememberMe"/> ¿Desea guardar su
             contraseña?
           </div>
           <button type="submit" class="register-button">Ingresar</button>
