--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -28,7 +28,7 @@
       <ul class="user-options"> 
         <% if(locals.isLogged){ %>
           <li>
-            <a href="/users/profile"><img src="/images/users/<%= locals.userLogged.profileImage %>" alt="" style="width: 24px; height: 24px; border-radius: 50%;">Hola <%= locals.userLogged.user %> </a>
+            <a href="/users/profile"><img src="<%= locals.userLogged.profileImage %>" alt="" style="width: 24px; height: 24px; border-radius: 50%;">Hola <%= locals.userLogged.user %> </a>
           </li>
           <li>
             <a href="/users/logout">cerrar sesión</a>
