--- a/src/views/users/profile.ejs
+++ b/src/views/users/profile.ejs
@@ -16,9 +16,10 @@
     <main>
         <section class="main-section-user">
             
-            <section class="first-section-image">
-                <div class="image-user">
-                    <img src="/images/users/<%= user.profileImage %>" alt="profileImage">
+            <main class="product-card">                
+               
+                <div class="image-product">
+              <img src="<%= user.profileImage %>" alt="profileImage">
                 </div>
             </section>
 
