the profile page's styles have been modified

--- a/src/views/users/profile.ejs
+++ b/src/views/users/profile.ejs
@@ -16,9 +16,8 @@
     <main>
         <section class="main-section-user">
             
-            <main class="product-card">                
-               
-                <div class="image-product">
+            <section class="first-section-image">
+                <div class="image-user">
               <img src="<%= user.profileImage %>" alt="profileImage">
                 </div>
             </section>
