--- a/public/css/register.css
+++ b/public/css/register.css
@@ -1,3 +1,12 @@
+.errors {
+    color: white;
+    background-color: rgba(197,11,17,0.71);
+    border-radius: 5px;
+    padding: 5px;
+    font-size: 12px;
+    font-weight: 500;
+}
+
 @media(min-width: 560px){
 
     .user-options{
