the userController has been succesfully connected to the mysql DB

--- a/public/css/profileStyles.css
+++ b/public/css/profileStyles.css
@@ -64,9 +64,11 @@ body{
     font-style: normal;
 }
 
-.user-country p{
+.user-country p,
+.user-address p, 
+.user-phone p {
     margin-block-start: 0px;
-    margin-block-end: 16px;
+    margin-block-end: 14px;
     font-size: 12px;
     font-weight: 400;    
 }
