--- a/src/views/partials/recommendations.ejs
+++ b/src/views/partials/recommendations.ejs
@@ -3,14 +3,14 @@
         Otros clientes también compraron
     </h2>
     <div class="list-of-products">
-        <% products.forEach(product => { if(product.type == "Destacados"){ %>
+        <% products.forEach(product => { %>
         <div class="mini-product-card">
             <a href="/products/detail/<%= product.id %>">
-                <img src="<%= product.img %>" alt="product-picture">
-                <p class="mini-name"><%= product.name %></p>
+                <img src="<%= product.image_product %>" alt="product-picture">
+                <p class="mini-name"><%= product.name_product %></p>
                 <p class="mini-price">$ <%= product.price %></p>
             </a>
         </div>
-        <% }}) %>                 
+        <% }) %>
     </div>
 </section>
