--- a/src/views/partials/reviewsList.ejs
+++ b/src/views/partials/reviewsList.ejs
@@ -7,23 +7,21 @@
             <div class="card-review">
                 <header>
                     <div class="review-image">
-                        <img src="<%=review.img%>" alt="profile-picture">
+                        <img src="<%=review.dataValues.customer.customer_profile_image%>" alt="profile-picture">
                      </div>
                  
                     <div class="name-date-stars">
-                        <p class="user-name"><%=review.name%></p>
-                        <p class="date-of-review"><%=review.date%></p>
+                        <p class="user-name"><%=review.dataValues.customer.dataValues.full_name%></p>
+                        <p class="date-of-review"></p>
                         <div class="stars-review-one-user">
+                            <% for (var i=1; i <= review.dataValues.score; i++){ %>
                             <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="far fa-star"></i>
-                            <i class="far fa-star"></i>
+                            <% } %>
                         </div>
                     </div>
                 </header>    
                     <p class="user-review-text">
-                        <%=review.text%>
+                        <%=review.dataValues.review_description%>
                     </p>
             </div>
         <% }) %>
