--- a/src/views/products/productCreate.ejs
+++ b/src/views/products/productCreate.ejs
@@ -40,13 +40,13 @@
           </section>
           <section class = columns>
           <div>
-            <label for="name">Nombre del producto</label>
+            <label for="name_product">Nombre del producto</label>
             <input
               size="20px"
               type="text"
               class="input"
-              id="fname"
-              name="name"
+              id="name_product"
+              name="name_product"
               placeholder="  Nombre del producto"
               required
               minlength="3"
@@ -56,8 +56,8 @@
             <label for="description">Descripción</label>
             <textarea name="description" id="description" cols="4" class="input-description"></textarea>
           </div>
-          <label for="product-image">Imagen del producto</label>
-              <input type="file" name="product-image" id="file" class = "input-image" />
+          <label for="image_product">Imagen del producto</label>
+              <input type="file" name="image_product" id="file" class = "input-image" />
           <div>
             <label for="category">Categoría</label>
             <select name="category" id="category" class="input">
@@ -67,7 +67,7 @@
                 <option value="Monitores"> Monitores</option>
                 <option value="Procesadores">Procesadores</option>
                 <option value="Tarjetas madre"> Tarjetas Madre</option>
-                <option value="Darjetas de video">Tarjetas de video</option>
+                <option value="Tarjetas de video">Tarjetas de video</option>
                 <option value="Disipadores y enfriamiento">Disipadores y Enfriamiento</option>
                 <option value="PC Gamer">PC Gamer</option>
                 <option value="Almacenamiento">Almacenamiento</option>
@@ -106,9 +106,13 @@
             <label for="price">Precio</label>
             <input type="number" name="price" id="price" class="input" placeholder="Precio" required>
           </div>
+              <div class="form-input">
+                  <label for="stock">Stock disponible</label>
+                  <input type="number" name="stock" id="stock" class="input" placeholder="Stock" required>
+              </div>
           <div class="form-input">
             <label for="type">Tipo: </label>
-            <select name="type" id="type" class= "input">             -->
+            <select name="type" id="type" class= "input">
               <option value="Destacados" selected>Destacados</option>
               <option value="Agregados recientemente">Agregados recientemente</option>
               <option value="Más vendidos">Más vendidos</option>
