--- a/src/views/products/productCart.ejs
+++ b/src/views/products/productCart.ejs
@@ -5,6 +5,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700;900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="/css/productDetailStyles.css">
         <link rel="stylesheet" href="/css/productCartStyles.css">
+        <script src="/js/productCardForCart.js"></script>
         <title>ProductCart</title>       
     </head>
 
@@ -47,158 +48,11 @@
 
             <section class="list-of-p-and-pay-one">
                 <section class="list-of-items-to-pay">
-                    <div class="product-card">
-                        <img src="/images/gabriel-beaudry-5X5dCf4Pp44-unsplash.jpg" alt="product-image" class="product-img">                       
-                        
-                        <div class="name-buttoms-product">
-                            <p class="product-name">
-                                Nombre del producto
-                            </p>
-
-                            <div class="buttoms-and-price">
-                                <div class="buttons-for-#-items">
-                                    <div class="number-of-items">
-                                        <button>
-                                            <i class="fas fa-minus"></i>
-                                        </button>
-                                        <p>
-                                            1
-                                        </p>
-                                        <button>
-                                            <i class="fas fa-plus"></i>
-                                        </button>
-                                    </div>
-                        
-                                    <div class="trash">
-                                        <button>
-                                            <i class="fas fa-trash"></i>
-                                        </button>
-                                    </div>                                                        
-                                </div>
-
-                                <div class="product-price-mobile"> 
-                                    <p class="name-price">
-                                        Precio:
-                                    </p>                                                                                                  
-                                    <p class="number-price">
-                                        $ 000.00
-                                    </p>
-                                </div>
-                            </div>
-    
-                                                       
-                        </div>
-
-                        <div class="product-price-desktop">                            
-                            <p class="number-price">
-                                $ 000.00
-                            </p>
-                        </div>
-                        
-
-                    </div> 
+                    <%- include('../partials/productCardForCart')%>                                        
                     
-                    <div class="product-card">
-                        <img src="/images/gabriel-beaudry-5X5dCf4Pp44-unsplash.jpg" alt="product-image" class="product-img">                       
-                        
-                        <div class="name-buttoms-product">
-                            <p class="product-name">
-                                Nombre del producto
-                            </p>
+                    <%- include('../partials/productCardForCart')%>
 
-                            <div class="buttoms-and-price">
-                                <div class="buttons-for-#-items">
-                                    <div class="number-of-items">
-                                        <button>
-                                            <i class="fas fa-minus"></i>
-                                        </button>
-                                        <p>
-                                            1
-                                        </p>
-                                        <button>
-                                            <i class="fas fa-plus"></i>
-                                        </button>
-                                    </div>
-                        
-                                    <div class="trash">
-                                        <button>
-                                            <i class="fas fa-trash"></i>
-                                        </button>
-                                    </div>                                                        
-                                </div>
-
-                                <div class="product-price-mobile"> 
-                                    <p class="name-price">
-                                        Precio:
-                                    </p>                                                                                                  
-                                    <p class="number-price">
-                                        $ 000.00
-                                    </p>
-                                </div>
-                            </div>
-    
-                                                       
-                        </div>
-
-                        <div class="product-price-desktop">                            
-                            <p class="number-price">
-                                $ 000.00
-                            </p>
-                        </div>
-                        
-
-                    </div>
-                    
-                    <div class="product-card">
-                        <img src="/images/gabriel-beaudry-5X5dCf4Pp44-unsplash.jpg" alt="product-image" class="product-img">                       
-                        
-                        <div class="name-buttoms-product">
-                            <p class="product-name">
-                                Nombre del producto
-                            </p>
-
-                            <div class="buttoms-and-price">
-                                <div class="buttons-for-#-items">
-                                    <div class="number-of-items">
-                                        <button>
-                                            <i class="fas fa-minus"></i>
-                                        </button>
-                                        <p>
-                                            1
-                                        </p>
-                                        <button>
-                                            <i class="fas fa-plus"></i>
-                                        </button>
-                                    </div>
-                        
-                                    <div class="trash">
-                                        <button>
-                                            <i class="fas fa-trash"></i>
-                                        </button>
-                                    </div>                                                        
-                                </div>
-
-                                <div class="product-price-mobile"> 
-                                    <p class="name-price">
-                                        Precio:
-                                    </p>                                                                                                  
-                                    <p class="number-price">
-                                        $ 000.00
-                                    </p>
-                                </div>
-                            </div>
-    
-                                                       
-                        </div>
-
-                        <div class="product-price-desktop">                            
-                            <p class="number-price">
-                                $ 000.00
-                            </p>
-                        </div>
-                        
-
-                    </div>
+                    <%- include('../partials/productCardForCart')%>
     
                 </section>
     
