--- a/public/css/product/productEditForm.css
+++ b/public/css/product/productEditForm.css
@@ -77,6 +77,8 @@ form div label {
   box-shadow: 0px 0px 10px black;
   transition: all 450ms;
   border-radius: 5px;
+  flex-direction: row;
+  justify-content: center;
 }
 
 .fa-pencil-alt {
@@ -148,6 +150,21 @@ form div label {
   border: rgba(50, 108, 144, 1) solid 2px !important;
   box-shadow: 0px 0px 10px rgb(225, 48, 108);
   outline: none;
+}
+
+.validationsF{
+  color: red;
+  font-size: 12px;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  flex-direction: column;
+  
+}
+
+.validationsF li{
+  width: fit-content;
+  text-align: justify;
 }
 
 @media (min-width: 769px) {
