--- a/src/views/products/productCreate.ejs
+++ b/src/views/products/productCreate.ejs
@@ -13,6 +13,7 @@
     <link href="/css/normalize.css" rel="stylesheet" />    
     <link href="/css/home/formStyles.css" rel=stylesheet>  
     <link href="/css/product/productCreate.css" rel="stylesheet" />  
+    <script src="/js/productCreateValidation.js"></script>
     <script async src="/js/preview.js"></script>
     <title>Agregar producto</title>
   </head>
@@ -25,6 +26,10 @@
       <section>
         <h1> <i class="fas fa-plus-circle"></i> Agregar producto</h1>
         <form action="/products" method="POST" enctype="multipart/form-data">
+          <div class="validationsF">
+            <ul>              
+            </ul>
+          </div>  
           <section class = columns>
             <!-- <img 
               src="/images/home/i9.jpg" 
