the product backend validation has been implemented

--- a/public/css/product/productCreate.css
+++ b/public/css/product/productCreate.css
@@ -100,6 +100,15 @@ main section .columns{
     
 }
 
+.errors {
+    color: white;
+    background-color: rgba(197,11,17,0.71);
+    border-radius: 5px;
+    padding: 5px;
+    font-size: 12px;
+    font-weight: 500;
+}
+
 .validationsF li{
     width: fit-content;
     text-align: justify;
