--- a/public/css/product/productEditForm.css
+++ b/public/css/product/productEditForm.css
@@ -66,7 +66,7 @@ form div label {
 
 .form-container {
   max-width: 90%;
-  max-height: 900px;
+ /* max-height: 900px; */
   padding: 1%;
   margin: 80px auto;
   background-color: white;
@@ -150,6 +150,15 @@ form div label {
   border: rgba(50, 108, 144, 1) solid 2px !important;
   box-shadow: 0px 0px 10px rgb(225, 48, 108);
   outline: none;
+}
+
+.errors {
+  color: white;
+  background-color: rgba(197,11,17,0.71);
+  border-radius: 5px;
+  padding: 5px;
+  font-size: 12px;
+  font-weight: 500;
 }
 
 .validationsF{
